// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Layout matches snapshot for layout with multiple children 1`] = `
<div
  class="min-h-screen bg-base-100"
>
  <nav
    class="bg-gradient-to-r from-blue-300 via-blue-400 to-blue-500 shadow-md sticky top-0 z-10"
  >
    <div
      class="max-w-7xl mx-auto px-3"
    >
      <div
        class="flex justify-between items-center py-2"
      >
        <div
          class="flex items-center space-x-3"
        >
          <a
            href="/"
          >
            <svg
              class="text-white hover:text-blue-100 transform transition duration-300 ease-in-out"
              fill="currentColor"
              height="40"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 496 512"
              width="40"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M287.6 54.2c-10.8-2.2-22.1-3.3-33.5-3.6V32.4c78.1 2.2 146.1 44 184.6 106.6l-15.8 9.1c-6.1-9.7-12.7-18.8-20.2-27.1l-18 15.5c-26-29.6-61.4-50.7-101.9-58.4l4.8-23.9zM53.4 322.4l23-7.7c-6.4-18.3-10-38.2-10-58.7s3.3-40.4 9.7-58.7l-22.7-7.7c3.6-10.8 8.3-21.3 13.6-31l-15.8-9.1C34 181 24.1 217.5 24.1 256s10 75 27.1 106.6l15.8-9.1c-5.3-10-9.7-20.3-13.6-31.1zM213.1 434c-40.4-8-75.8-29.1-101.9-58.7l-18 15.8c-7.5-8.6-14.4-17.7-20.2-27.4l-16 9.4c38.5 62.3 106.8 104.3 184.9 106.6v-18.3c-11.3-.3-22.7-1.7-33.5-3.6l4.7-23.8zM93.3 120.9l18 15.5c26-29.6 61.4-50.7 101.9-58.4l-4.7-23.8c10.8-2.2 22.1-3.3 33.5-3.6V32.4C163.9 34.6 95.9 76.4 57.4 139l15.8 9.1c6-9.7 12.6-18.9 20.1-27.2zm309.4 270.2l-18-15.8c-26 29.6-61.4 50.7-101.9 58.7l4.7 23.8c-10.8 1.9-22.1 3.3-33.5 3.6v18.3c78.1-2.2 146.4-44.3 184.9-106.6l-16.1-9.4c-5.7 9.7-12.6 18.8-20.1 27.4zM496 256c0 137-111 248-248 248S0 393 0 256 111 8 248 8s248 111 248 248zm-12.2 0c0-130.1-105.7-235.8-235.8-235.8S12.2 125.9 12.2 256 117.9 491.8 248 491.8 483.8 386.1 483.8 256zm-39-106.6l-15.8 9.1c5.3 9.7 10 20.2 13.6 31l-22.7 7.7c6.4 18.3 9.7 38.2 9.7 58.7s-3.6 40.4-10 58.7l23 7.7c-3.9 10.8-8.3 21-13.6 31l15.8 9.1C462 331 471.9 294.5 471.9 256s-9.9-75-27.1-106.6zm-183 177.7c16.3-3.3 30.4-11.6 40.7-23.5l51.2 44.8c11.9-13.6 21.3-29.3 27.1-46.8l-64.2-22.1c2.5-7.5 3.9-15.2 3.9-23.5s-1.4-16.1-3.9-23.5l64.5-22.1c-6.1-17.4-15.5-33.2-27.4-46.8l-51.2 44.8c-10.2-11.9-24.4-20.5-40.7-23.8l13.3-66.4c-8.6-1.9-17.7-2.8-27.1-2.8-9.4 0-18.5.8-27.1 2.8l13.3 66.4c-16.3 3.3-30.4 11.9-40.7 23.8l-51.2-44.8c-11.9 13.6-21.3 29.3-27.4 46.8l64.5 22.1c-2.5 7.5-3.9 15.2-3.9 23.5s1.4 16.1 3.9 23.5l-64.2 22.1c5.8 17.4 15.2 33.2 27.1 46.8l51.2-44.8c10.2 11.9 24.4 20.2 40.7 23.5l-13.3 66.7c8.6 1.7 17.7 2.8 27.1 2.8 9.4 0 18.5-1.1 27.1-2.8l-13.3-66.7z"
              />
            </svg>
          </a>
        </div>
        <div
          class="flex items-center gap-4"
        >
          <a
            class="text-white flex flex-col items-center hover:text-blue-100 transition duration-300"
            href="/"
          >
            <svg
              class="lucide lucide-house"
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
              />
              <path
                d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
              />
            </svg>
            <span
              class="text-xs hidden md:block"
            >
              Home
            </span>
          </a>
          <a
            class="text-white flex flex-col items-center relative hover:text-blue-100 transition duration-300"
            href="/network"
          >
            <svg
              class="lucide lucide-users"
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
              />
              <circle
                cx="9"
                cy="7"
                r="4"
              />
              <path
                d="M22 21v-2a4 4 0 0 0-3-3.87"
              />
              <path
                d="M16 3.13a4 4 0 0 1 0 7.75"
              />
            </svg>
            <span
              class="text-xs hidden md:block"
            >
              My Network
            </span>
          </a>
          <a
            class="text-white flex flex-col items-center relative hover:text-blue-100 transition duration-300"
            href="/notifications"
          >
            <svg
              class="lucide lucide-bell"
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 8a6 6 0 0 1 12 0c0 7 3 9 3 9H3s3-2 3-9"
              />
              <path
                d="M10.3 21a1.94 1.94 0 0 0 3.4 0"
              />
            </svg>
            <span
              class="text-xs hidden md:block"
            >
              Notifications
            </span>
          </a>
          <a
            class="text-white flex flex-col items-center hover:text-blue-100 transition duration-300"
            href="/profile/testuser"
          >
            <svg
              class="lucide lucide-user"
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
              />
              <circle
                cx="12"
                cy="7"
                r="4"
              />
            </svg>
            <span
              class="text-xs hidden md:block"
            >
              Me
            </span>
          </a>
          <a
            class="text-white flex flex-col items-center hover:text-blue-100 transition duration-300"
            href="/contestCalender"
          >
            <svg
              class="lucide lucide-calendar-range"
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="4"
              />
              <path
                d="M16 2v4"
              />
              <path
                d="M3 10h18"
              />
              <path
                d="M8 2v4"
              />
              <path
                d="M17 14h-6"
              />
              <path
                d="M13 18H7"
              />
              <path
                d="M7 14h.01"
              />
              <path
                d="M17 18h.01"
              />
            </svg>
            <span
              class="text-xs hidden md:block"
            >
              Contest
            </span>
          </a>
          <button
            class="flex items-center space-x-1 text-white hover:text-blue-100 transition duration-300"
          >
            <svg
              class="lucide lucide-log-out"
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"
              />
              <polyline
                points="16 17 21 12 16 7"
              />
              <line
                x1="21"
                x2="9"
                y1="12"
                y2="12"
              />
            </svg>
            <span
              class="hidden md:inline"
            >
              Logout
            </span>
          </button>
        </div>
      </div>
    </div>
  </nav>
  <main
    class="max-w-7xl mx-auto px-4 py-6"
  >
    <div>
      First child
    </div>
    <div>
      Second child
    </div>
    <span>
      Third child
    </span>
  </main>
</div>
`;

exports[`Layout matches snapshot for layout with nested components 1`] = `
<div
  class="min-h-screen bg-base-100"
>
  <nav
    class="bg-gradient-to-r from-blue-300 via-blue-400 to-blue-500 shadow-md sticky top-0 z-10"
  >
    <div
      class="max-w-7xl mx-auto px-3"
    >
      <div
        class="flex justify-between items-center py-2"
      >
        <div
          class="flex items-center space-x-3"
        >
          <a
            href="/"
          >
            <svg
              class="text-white hover:text-blue-100 transform transition duration-300 ease-in-out"
              fill="currentColor"
              height="40"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 496 512"
              width="40"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M287.6 54.2c-10.8-2.2-22.1-3.3-33.5-3.6V32.4c78.1 2.2 146.1 44 184.6 106.6l-15.8 9.1c-6.1-9.7-12.7-18.8-20.2-27.1l-18 15.5c-26-29.6-61.4-50.7-101.9-58.4l4.8-23.9zM53.4 322.4l23-7.7c-6.4-18.3-10-38.2-10-58.7s3.3-40.4 9.7-58.7l-22.7-7.7c3.6-10.8 8.3-21.3 13.6-31l-15.8-9.1C34 181 24.1 217.5 24.1 256s10 75 27.1 106.6l15.8-9.1c-5.3-10-9.7-20.3-13.6-31.1zM213.1 434c-40.4-8-75.8-29.1-101.9-58.7l-18 15.8c-7.5-8.6-14.4-17.7-20.2-27.4l-16 9.4c38.5 62.3 106.8 104.3 184.9 106.6v-18.3c-11.3-.3-22.7-1.7-33.5-3.6l4.7-23.8zM93.3 120.9l18 15.5c26-29.6 61.4-50.7 101.9-58.4l-4.7-23.8c10.8-2.2 22.1-3.3 33.5-3.6V32.4C163.9 34.6 95.9 76.4 57.4 139l15.8 9.1c6-9.7 12.6-18.9 20.1-27.2zm309.4 270.2l-18-15.8c-26 29.6-61.4 50.7-101.9 58.7l4.7 23.8c-10.8 1.9-22.1 3.3-33.5 3.6v18.3c78.1-2.2 146.4-44.3 184.9-106.6l-16.1-9.4c-5.7 9.7-12.6 18.8-20.1 27.4zM496 256c0 137-111 248-248 248S0 393 0 256 111 8 248 8s248 111 248 248zm-12.2 0c0-130.1-105.7-235.8-235.8-235.8S12.2 125.9 12.2 256 117.9 491.8 248 491.8 483.8 386.1 483.8 256zm-39-106.6l-15.8 9.1c5.3 9.7 10 20.2 13.6 31l-22.7 7.7c6.4 18.3 9.7 38.2 9.7 58.7s-3.6 40.4-10 58.7l23 7.7c-3.9 10.8-8.3 21-13.6 31l15.8 9.1C462 331 471.9 294.5 471.9 256s-9.9-75-27.1-106.6zm-183 177.7c16.3-3.3 30.4-11.6 40.7-23.5l51.2 44.8c11.9-13.6 21.3-29.3 27.1-46.8l-64.2-22.1c2.5-7.5 3.9-15.2 3.9-23.5s-1.4-16.1-3.9-23.5l64.5-22.1c-6.1-17.4-15.5-33.2-27.4-46.8l-51.2 44.8c-10.2-11.9-24.4-20.5-40.7-23.8l13.3-66.4c-8.6-1.9-17.7-2.8-27.1-2.8-9.4 0-18.5.8-27.1 2.8l13.3 66.4c-16.3 3.3-30.4 11.9-40.7 23.8l-51.2-44.8c-11.9 13.6-21.3 29.3-27.4 46.8l64.5 22.1c-2.5 7.5-3.9 15.2-3.9 23.5s1.4 16.1 3.9 23.5l-64.2 22.1c5.8 17.4 15.2 33.2 27.1 46.8l51.2-44.8c10.2 11.9 24.4 20.2 40.7 23.5l-13.3 66.7c8.6 1.7 17.7 2.8 27.1 2.8 9.4 0 18.5-1.1 27.1-2.8l-13.3-66.7z"
              />
            </svg>
          </a>
        </div>
        <div
          class="flex items-center gap-4"
        >
          <a
            class="text-white flex flex-col items-center hover:text-blue-100 transition duration-300"
            href="/"
          >
            <svg
              class="lucide lucide-house"
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
              />
              <path
                d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
              />
            </svg>
            <span
              class="text-xs hidden md:block"
            >
              Home
            </span>
          </a>
          <a
            class="text-white flex flex-col items-center relative hover:text-blue-100 transition duration-300"
            href="/network"
          >
            <svg
              class="lucide lucide-users"
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
              />
              <circle
                cx="9"
                cy="7"
                r="4"
              />
              <path
                d="M22 21v-2a4 4 0 0 0-3-3.87"
              />
              <path
                d="M16 3.13a4 4 0 0 1 0 7.75"
              />
            </svg>
            <span
              class="text-xs hidden md:block"
            >
              My Network
            </span>
          </a>
          <a
            class="text-white flex flex-col items-center relative hover:text-blue-100 transition duration-300"
            href="/notifications"
          >
            <svg
              class="lucide lucide-bell"
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 8a6 6 0 0 1 12 0c0 7 3 9 3 9H3s3-2 3-9"
              />
              <path
                d="M10.3 21a1.94 1.94 0 0 0 3.4 0"
              />
            </svg>
            <span
              class="text-xs hidden md:block"
            >
              Notifications
            </span>
          </a>
          <a
            class="text-white flex flex-col items-center hover:text-blue-100 transition duration-300"
            href="/profile/testuser"
          >
            <svg
              class="lucide lucide-user"
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
              />
              <circle
                cx="12"
                cy="7"
                r="4"
              />
            </svg>
            <span
              class="text-xs hidden md:block"
            >
              Me
            </span>
          </a>
          <a
            class="text-white flex flex-col items-center hover:text-blue-100 transition duration-300"
            href="/contestCalender"
          >
            <svg
              class="lucide lucide-calendar-range"
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="4"
              />
              <path
                d="M16 2v4"
              />
              <path
                d="M3 10h18"
              />
              <path
                d="M8 2v4"
              />
              <path
                d="M17 14h-6"
              />
              <path
                d="M13 18H7"
              />
              <path
                d="M7 14h.01"
              />
              <path
                d="M17 18h.01"
              />
            </svg>
            <span
              class="text-xs hidden md:block"
            >
              Contest
            </span>
          </a>
          <button
            class="flex items-center space-x-1 text-white hover:text-blue-100 transition duration-300"
          >
            <svg
              class="lucide lucide-log-out"
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"
              />
              <polyline
                points="16 17 21 12 16 7"
              />
              <line
                x1="21"
                x2="9"
                y1="12"
                y2="12"
              />
            </svg>
            <span
              class="hidden md:inline"
            >
              Logout
            </span>
          </button>
        </div>
      </div>
    </div>
  </nav>
  <main
    class="max-w-7xl mx-auto px-4 py-6"
  >
    <header>
      Header content
    </header>
    <main>
      <div>
        Main content
      </div>
      <aside>
        Sidebar content
      </aside>
    </main>
    <footer>
      Footer content
    </footer>
  </main>
</div>
`;

exports[`Layout matches snapshot for layout with single child 1`] = `
<div
  class="min-h-screen bg-base-100"
>
  <nav
    class="bg-gradient-to-r from-blue-300 via-blue-400 to-blue-500 shadow-md sticky top-0 z-10"
  >
    <div
      class="max-w-7xl mx-auto px-3"
    >
      <div
        class="flex justify-between items-center py-2"
      >
        <div
          class="flex items-center space-x-3"
        >
          <a
            href="/"
          >
            <svg
              class="text-white hover:text-blue-100 transform transition duration-300 ease-in-out"
              fill="currentColor"
              height="40"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 496 512"
              width="40"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M287.6 54.2c-10.8-2.2-22.1-3.3-33.5-3.6V32.4c78.1 2.2 146.1 44 184.6 106.6l-15.8 9.1c-6.1-9.7-12.7-18.8-20.2-27.1l-18 15.5c-26-29.6-61.4-50.7-101.9-58.4l4.8-23.9zM53.4 322.4l23-7.7c-6.4-18.3-10-38.2-10-58.7s3.3-40.4 9.7-58.7l-22.7-7.7c3.6-10.8 8.3-21.3 13.6-31l-15.8-9.1C34 181 24.1 217.5 24.1 256s10 75 27.1 106.6l15.8-9.1c-5.3-10-9.7-20.3-13.6-31.1zM213.1 434c-40.4-8-75.8-29.1-101.9-58.7l-18 15.8c-7.5-8.6-14.4-17.7-20.2-27.4l-16 9.4c38.5 62.3 106.8 104.3 184.9 106.6v-18.3c-11.3-.3-22.7-1.7-33.5-3.6l4.7-23.8zM93.3 120.9l18 15.5c26-29.6 61.4-50.7 101.9-58.4l-4.7-23.8c10.8-2.2 22.1-3.3 33.5-3.6V32.4C163.9 34.6 95.9 76.4 57.4 139l15.8 9.1c6-9.7 12.6-18.9 20.1-27.2zm309.4 270.2l-18-15.8c-26 29.6-61.4 50.7-101.9 58.7l4.7 23.8c-10.8 1.9-22.1 3.3-33.5 3.6v18.3c78.1-2.2 146.4-44.3 184.9-106.6l-16.1-9.4c-5.7 9.7-12.6 18.8-20.1 27.4zM496 256c0 137-111 248-248 248S0 393 0 256 111 8 248 8s248 111 248 248zm-12.2 0c0-130.1-105.7-235.8-235.8-235.8S12.2 125.9 12.2 256 117.9 491.8 248 491.8 483.8 386.1 483.8 256zm-39-106.6l-15.8 9.1c5.3 9.7 10 20.2 13.6 31l-22.7 7.7c6.4 18.3 9.7 38.2 9.7 58.7s-3.6 40.4-10 58.7l23 7.7c-3.9 10.8-8.3 21-13.6 31l15.8 9.1C462 331 471.9 294.5 471.9 256s-9.9-75-27.1-106.6zm-183 177.7c16.3-3.3 30.4-11.6 40.7-23.5l51.2 44.8c11.9-13.6 21.3-29.3 27.1-46.8l-64.2-22.1c2.5-7.5 3.9-15.2 3.9-23.5s-1.4-16.1-3.9-23.5l64.5-22.1c-6.1-17.4-15.5-33.2-27.4-46.8l-51.2 44.8c-10.2-11.9-24.4-20.5-40.7-23.8l13.3-66.4c-8.6-1.9-17.7-2.8-27.1-2.8-9.4 0-18.5.8-27.1 2.8l13.3 66.4c-16.3 3.3-30.4 11.9-40.7 23.8l-51.2-44.8c-11.9 13.6-21.3 29.3-27.4 46.8l64.5 22.1c-2.5 7.5-3.9 15.2-3.9 23.5s1.4 16.1 3.9 23.5l-64.2 22.1c5.8 17.4 15.2 33.2 27.1 46.8l51.2-44.8c10.2 11.9 24.4 20.2 40.7 23.5l-13.3 66.7c8.6 1.7 17.7 2.8 27.1 2.8 9.4 0 18.5-1.1 27.1-2.8l-13.3-66.7z"
              />
            </svg>
          </a>
        </div>
        <div
          class="flex items-center gap-4"
        >
          <a
            class="text-white flex flex-col items-center hover:text-blue-100 transition duration-300"
            href="/"
          >
            <svg
              class="lucide lucide-house"
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
              />
              <path
                d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
              />
            </svg>
            <span
              class="text-xs hidden md:block"
            >
              Home
            </span>
          </a>
          <a
            class="text-white flex flex-col items-center relative hover:text-blue-100 transition duration-300"
            href="/network"
          >
            <svg
              class="lucide lucide-users"
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
              />
              <circle
                cx="9"
                cy="7"
                r="4"
              />
              <path
                d="M22 21v-2a4 4 0 0 0-3-3.87"
              />
              <path
                d="M16 3.13a4 4 0 0 1 0 7.75"
              />
            </svg>
            <span
              class="text-xs hidden md:block"
            >
              My Network
            </span>
          </a>
          <a
            class="text-white flex flex-col items-center relative hover:text-blue-100 transition duration-300"
            href="/notifications"
          >
            <svg
              class="lucide lucide-bell"
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 8a6 6 0 0 1 12 0c0 7 3 9 3 9H3s3-2 3-9"
              />
              <path
                d="M10.3 21a1.94 1.94 0 0 0 3.4 0"
              />
            </svg>
            <span
              class="text-xs hidden md:block"
            >
              Notifications
            </span>
          </a>
          <a
            class="text-white flex flex-col items-center hover:text-blue-100 transition duration-300"
            href="/profile/testuser"
          >
            <svg
              class="lucide lucide-user"
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
              />
              <circle
                cx="12"
                cy="7"
                r="4"
              />
            </svg>
            <span
              class="text-xs hidden md:block"
            >
              Me
            </span>
          </a>
          <a
            class="text-white flex flex-col items-center hover:text-blue-100 transition duration-300"
            href="/contestCalender"
          >
            <svg
              class="lucide lucide-calendar-range"
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="4"
              />
              <path
                d="M16 2v4"
              />
              <path
                d="M3 10h18"
              />
              <path
                d="M8 2v4"
              />
              <path
                d="M17 14h-6"
              />
              <path
                d="M13 18H7"
              />
              <path
                d="M7 14h.01"
              />
              <path
                d="M17 18h.01"
              />
            </svg>
            <span
              class="text-xs hidden md:block"
            >
              Contest
            </span>
          </a>
          <button
            class="flex items-center space-x-1 text-white hover:text-blue-100 transition duration-300"
          >
            <svg
              class="lucide lucide-log-out"
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"
              />
              <polyline
                points="16 17 21 12 16 7"
              />
              <line
                x1="21"
                x2="9"
                y1="12"
                y2="12"
              />
            </svg>
            <span
              class="hidden md:inline"
            >
              Logout
            </span>
          </button>
        </div>
      </div>
    </div>
  </nav>
  <main
    class="max-w-7xl mx-auto px-4 py-6"
  >
    <div>
      Test content
    </div>
  </main>
</div>
`;

exports[`Layout matches snapshot for layout without children 1`] = `
<div
  class="min-h-screen bg-base-100"
>
  <nav
    class="bg-gradient-to-r from-blue-300 via-blue-400 to-blue-500 shadow-md sticky top-0 z-10"
  >
    <div
      class="max-w-7xl mx-auto px-3"
    >
      <div
        class="flex justify-between items-center py-2"
      >
        <div
          class="flex items-center space-x-3"
        >
          <a
            href="/"
          >
            <svg
              class="text-white hover:text-blue-100 transform transition duration-300 ease-in-out"
              fill="currentColor"
              height="40"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 496 512"
              width="40"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M287.6 54.2c-10.8-2.2-22.1-3.3-33.5-3.6V32.4c78.1 2.2 146.1 44 184.6 106.6l-15.8 9.1c-6.1-9.7-12.7-18.8-20.2-27.1l-18 15.5c-26-29.6-61.4-50.7-101.9-58.4l4.8-23.9zM53.4 322.4l23-7.7c-6.4-18.3-10-38.2-10-58.7s3.3-40.4 9.7-58.7l-22.7-7.7c3.6-10.8 8.3-21.3 13.6-31l-15.8-9.1C34 181 24.1 217.5 24.1 256s10 75 27.1 106.6l15.8-9.1c-5.3-10-9.7-20.3-13.6-31.1zM213.1 434c-40.4-8-75.8-29.1-101.9-58.7l-18 15.8c-7.5-8.6-14.4-17.7-20.2-27.4l-16 9.4c38.5 62.3 106.8 104.3 184.9 106.6v-18.3c-11.3-.3-22.7-1.7-33.5-3.6l4.7-23.8zM93.3 120.9l18 15.5c26-29.6 61.4-50.7 101.9-58.4l-4.7-23.8c10.8-2.2 22.1-3.3 33.5-3.6V32.4C163.9 34.6 95.9 76.4 57.4 139l15.8 9.1c6-9.7 12.6-18.9 20.1-27.2zm309.4 270.2l-18-15.8c-26 29.6-61.4 50.7-101.9 58.7l4.7 23.8c-10.8 1.9-22.1 3.3-33.5 3.6v18.3c78.1-2.2 146.4-44.3 184.9-106.6l-16.1-9.4c-5.7 9.7-12.6 18.8-20.1 27.4zM496 256c0 137-111 248-248 248S0 393 0 256 111 8 248 8s248 111 248 248zm-12.2 0c0-130.1-105.7-235.8-235.8-235.8S12.2 125.9 12.2 256 117.9 491.8 248 491.8 483.8 386.1 483.8 256zm-39-106.6l-15.8 9.1c5.3 9.7 10 20.2 13.6 31l-22.7 7.7c6.4 18.3 9.7 38.2 9.7 58.7s-3.6 40.4-10 58.7l23 7.7c-3.9 10.8-8.3 21-13.6 31l15.8 9.1C462 331 471.9 294.5 471.9 256s-9.9-75-27.1-106.6zm-183 177.7c16.3-3.3 30.4-11.6 40.7-23.5l51.2 44.8c11.9-13.6 21.3-29.3 27.1-46.8l-64.2-22.1c2.5-7.5 3.9-15.2 3.9-23.5s-1.4-16.1-3.9-23.5l64.5-22.1c-6.1-17.4-15.5-33.2-27.4-46.8l-51.2 44.8c-10.2-11.9-24.4-20.5-40.7-23.8l13.3-66.4c-8.6-1.9-17.7-2.8-27.1-2.8-9.4 0-18.5.8-27.1 2.8l13.3 66.4c-16.3 3.3-30.4 11.9-40.7 23.8l-51.2-44.8c-11.9 13.6-21.3 29.3-27.4 46.8l64.5 22.1c-2.5 7.5-3.9 15.2-3.9 23.5s1.4 16.1 3.9 23.5l-64.2 22.1c5.8 17.4 15.2 33.2 27.1 46.8l51.2-44.8c10.2 11.9 24.4 20.2 40.7 23.5l-13.3 66.7c8.6 1.7 17.7 2.8 27.1 2.8 9.4 0 18.5-1.1 27.1-2.8l-13.3-66.7z"
              />
            </svg>
          </a>
        </div>
        <div
          class="flex items-center gap-4"
        >
          <a
            class="text-white flex flex-col items-center hover:text-blue-100 transition duration-300"
            href="/"
          >
            <svg
              class="lucide lucide-house"
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
              />
              <path
                d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
              />
            </svg>
            <span
              class="text-xs hidden md:block"
            >
              Home
            </span>
          </a>
          <a
            class="text-white flex flex-col items-center relative hover:text-blue-100 transition duration-300"
            href="/network"
          >
            <svg
              class="lucide lucide-users"
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
              />
              <circle
                cx="9"
                cy="7"
                r="4"
              />
              <path
                d="M22 21v-2a4 4 0 0 0-3-3.87"
              />
              <path
                d="M16 3.13a4 4 0 0 1 0 7.75"
              />
            </svg>
            <span
              class="text-xs hidden md:block"
            >
              My Network
            </span>
          </a>
          <a
            class="text-white flex flex-col items-center relative hover:text-blue-100 transition duration-300"
            href="/notifications"
          >
            <svg
              class="lucide lucide-bell"
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 8a6 6 0 0 1 12 0c0 7 3 9 3 9H3s3-2 3-9"
              />
              <path
                d="M10.3 21a1.94 1.94 0 0 0 3.4 0"
              />
            </svg>
            <span
              class="text-xs hidden md:block"
            >
              Notifications
            </span>
          </a>
          <a
            class="text-white flex flex-col items-center hover:text-blue-100 transition duration-300"
            href="/profile/testuser"
          >
            <svg
              class="lucide lucide-user"
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
              />
              <circle
                cx="12"
                cy="7"
                r="4"
              />
            </svg>
            <span
              class="text-xs hidden md:block"
            >
              Me
            </span>
          </a>
          <a
            class="text-white flex flex-col items-center hover:text-blue-100 transition duration-300"
            href="/contestCalender"
          >
            <svg
              class="lucide lucide-calendar-range"
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="4"
              />
              <path
                d="M16 2v4"
              />
              <path
                d="M3 10h18"
              />
              <path
                d="M8 2v4"
              />
              <path
                d="M17 14h-6"
              />
              <path
                d="M13 18H7"
              />
              <path
                d="M7 14h.01"
              />
              <path
                d="M17 18h.01"
              />
            </svg>
            <span
              class="text-xs hidden md:block"
            >
              Contest
            </span>
          </a>
          <button
            class="flex items-center space-x-1 text-white hover:text-blue-100 transition duration-300"
          >
            <svg
              class="lucide lucide-log-out"
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"
              />
              <polyline
                points="16 17 21 12 16 7"
              />
              <line
                x1="21"
                x2="9"
                y1="12"
                y2="12"
              />
            </svg>
            <span
              class="hidden md:inline"
            >
              Logout
            </span>
          </button>
        </div>
      </div>
    </div>
  </nav>
  <main
    class="max-w-7xl mx-auto px-4 py-6"
  />
</div>
`;
